@@ -4,6 +4,12 @@ replace restart {
 	mov	%1, %2
 } by {
 	; peephole 0 removed dead load into %1 from %2.
+} if notUsed(%1), notVolatile(%1), notVolatile(%2)
+
+replace restart {
+	clear	%1
+} by {
+	; peephole 1 removed dead clear of %1.
 } if notUsed(%1)
 
 replace restart {
@@ -11,15 +17,22 @@ replace restart {
 	mov	a, %1
 } by {
 	mov	%1, a
-	; peephole 1 removed redundant load from %1 into a.
+	; peephole 2 removed redundant load from %1 into a.
 } if notVolatile(%1)
+
+replace restart {
+	push	%1
+	pop	%1
+} by {
+	; peephole 3 removed redundant push / pop.
+}
 
 
 replace restart {
 	mov	a, #%1
 	ret
 } by {
-	; peephole 2 moved load to ret.
+	; peephole 4 moved load to ret.
 	ret	#%1
 }
 
@@ -27,7 +40,7 @@ replace restart {
 	xch	a, %1
 	xch	a, %1
 } by {
-	; peephole 3 removed redundant double exchange between a and %1.
+	; peephole 5 removed redundant double exchange between a and %1.
 } if notVolatile(%1)
 
 replace restart {
@@ -37,7 +50,7 @@ replace restart {
 } by {
 	mov	a, #0x00
 	slc	a
-	; peephole 4 removed redundant and.
+	; peephole 6 removed redundant and.
 }
 
 replace restart {
